src/test/ui/object-safety/object-safety-sized-2.object_safe_for_dispatch.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-sized-2.rs:16:5
   |
LL |     t
   |     ^ the trait `Bar` cannot be made into an object
   |
   = note: the trait cannot require that `Self : Sized`
   = note: required when trying to coerce from type `&T` to type '&dyn Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
